--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <section class="site-nav">
     <header>
         <nav id="navigation" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
+            <a href="/">Home</a>
             <a href="../blog/blog.html">Blog</a>
             <a href="../work/work.html">Works</a>
             <a href="../collections/collections.html">Collections</a>
