--- a/css/main.scss
+++ b/css/main.scss
@@ -59,7 +59,8 @@ address p {
   line-height: 1.5;
   color: #21272d;
   font-weight: 400;
-  margin: 50px 0 0 1.5em;
+  margin: 0 0 1.5em;
+  padding-top: 50px;
   box-sizing: border-box;
   display: inline-block;
 }
