--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,7 @@ address p {
   color: #21272d;
   font-weight: 400;
   margin: 0 0 1.5em;
-  padding-top: 50px;
+  padding-top: 30em;
   box-sizing: border-box;
   display: inline-block;
 }
