--- a/css/main.scss
+++ b/css/main.scss
@@ -26,9 +26,13 @@ div {
   display: block;
 }
 
-.fonttitle{
+.font-title{
   font-family: SimHei;
-  font-weight:300;
+  font-weight:500;
+}
+
+.font-title-size{
+  font-size: x-large;
 }
 
 address img.big-author {
