--- a/css/main.scss
+++ b/css/main.scss
@@ -28,11 +28,12 @@ div {
 
 .font-title{
   font-family: SimHei;
-  font-weight:500;
+  font-weight: 500;
 }
 
 .font-title-size{
   font-size: x-large;
+  color: 00a2e8;
 }
 
 address img.big-author {
