--- a/css/main.scss
+++ b/css/main.scss
@@ -32,8 +32,13 @@ div {
 }
 
 .font-title-size{
-  font-size: x-large;
+  font-size: xx-large;
   color: #00a2e8;
+}
+
+.font-h2{
+  font-family: SimSun;
+  font-size: normal;
 }
 
 address img.big-author {
