--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -3,6 +3,9 @@
   position: relative;
   margin-left: 100px;
   padding-left: 50px;
+  line-height: 1.6em;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #555;
 }
 
 #timeline p.line-end {
@@ -79,9 +82,12 @@
   position: absolute;
   left: 0;
   line-height: 40px;
-  color: #fff;
+  color: #000;
   font-weight: bold;
   text-shadow: 0 1px 2px rgba(0,0,0,.1);
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
 #timeline li.item i.arrow-left {
@@ -122,3 +128,33 @@ i.arrow-left {
   color: #fff;
   font-size: .8em;
 }
+
+#timeline:before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -4px;
+  height: 100%;
+  border-left: 4px solid #bbb;
+}
+
+.fa:before {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  text-align: center;
+}
+
+.fa-code-fork:before {
+  content: "\f126";
+}
+
+#timeline:before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -4px;
+  height: 100%;
+  border-left: 4px solid #bbb;
+}
+
