--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -138,14 +138,14 @@ i.arrow-left {
   border-left: 4px solid #bbb;
 }
 
-.fa:before {
+.fa {
   display: inline-block;
   width: 1em;
   height: 1em;
   text-align: center;
 }
 
-.fa-code-fork:before {
+.fa-code-fork {
   content: "\f126";
 }
 
