--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -1,14 +1,23 @@
 @charset "utf-8";
-#timeline {
+.about-timeline-main{
+  position:relative; zoom:1;
+  background:rgba(238,238,238,.4);
+}
+
+#timeline{
   position: relative;
   margin-left: 100px;
   padding-left: 50px;
-  line-height: 1.6em;
-  font-family: Helvetica, Arial, sans-serif;
-  color: #555;
 }
-
-#timeline p.line-end {
+#timeline:before{
+  content: "";
+  display: block;
+  position: absolute;
+  left: -4px;
+  height: 100%;
+  border-left: 4px solid #bbb;
+}
+#timeline p.line-end{
   position: relative;
   left: -92px;
   width: 80px;
@@ -19,33 +28,18 @@
   color: #666;
   text-align: center;
 }
-
-#timeline ul.item-list {
+#timeline ul.item-list{
   position: relative;
   list-style: none;
 }
-
-#timeline p.line-end {
-  position: relative;
-  left: -92px;
-  width: 80px;
-  border-radius: 10px;
-  border: 3px solid #fff;
-  background: #fff;
-  box-shadow: 0 1px 2px rgba(0,0,0,.1);
-  color: #666;
-  text-align: center;
-}
-
-#timeline li.item {
+#timeline li.item{
   position: relative;
   margin: 30px 0;
-  border: 1px solid #e0e0e0;
+  /*border: 1px solid #e0e0e0;*/
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(0,0,0,.2);
 }
-
-#timeline li.item .meta {
+#timeline li.item .meta{
   position: absolute;
   left: -150px;
   width: 150px;
@@ -53,8 +47,7 @@
   line-height: 40px;
   overflow: visible;
 }
-
-#timeline li.item .meta i.fa {
+#timeline li.item .meta i.fa{
   position: absolute;
   right: 32px;
   width: 40px;
@@ -67,60 +60,77 @@
   color: #666;
   box-shadow: 0 1px 2px rgba(0,0,0,.2);
 }
-
-.fa {
-  display: inline-block;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-#timeline li.item p.date {
+#timeline li.item p.date{
   position: absolute;
   left: 0;
   line-height: 40px;
-  color: #000;
+  /*color: #fff;*/
   font-weight: bold;
   text-shadow: 0 1px 2px rgba(0,0,0,.1);
-  margin: 0;
-  padding: 0;
-  border: 0;
 }
-
-#timeline li.item i.arrow-left {
+#timeline li.item i.arrow-left{
   left: auto;
   right: -8px;
   box-shadow: -1px -1px 0px rgba(0,0,0,.1);
 }
-
-i.arrow-left {
-  display: inline-block;
-  position: absolute;
-  top: 12px;
-  left: -8px;
-  width: 15px;
-  height: 15px;
-  overflow: hidden;
-  background: #fff;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-#timeline li.item .content {
+#timeline li.item .content{
   position: relative;
   z-index: 1;
 }
-
-#timeline li.item p.tags {
+#timeline li.item header{
+  position: relative;
+  padding: 0 15px;
+  /*border-bottom: 1px solid #e0e0e0;*/
+}
+#timeline li.item header:after{
+  content: "";
+  clear: both;
+  height: 0;
+  overflow: hidden;
+}
+#timeline li.item header h3{
+  display: block;
+  float: left;
+  height: 40px;
+  line-height: 40px;
+  margin-right: 10px;
+  font-weight: normal;
+}
+#timeline li.item header .links{
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 40px;
+  padding: 10px;
+  line-height: 20px;
+  font-size: 12px;
+}
+#timeline li.item:hover header .links{
+  display: block;
+}
+#timeline li.item:hover header .link-item{
+  display: inline-block;
+  margin-left: 10px;
+}
+#timeline li.item header .links a{
+  position: relative;
+  width: 20px;
+  height: 20px;
+  color: #999;
+}
+#timeline li.item header .links a:hover{
+  color: #06c;
+}
+#timeline li.item header .links a i.fa{
+  position: absolute;
+  line-height: 20px;
+  font-size: 1.5em;
+}
+#timeline li.item p.tags{
   line-height: 40px;
 }
-
-#timeline li.item span.tag {
+#timeline li.item span.tag{
   margin-right: 5px;
   padding: 2px 10px;
   border-radius: 3px;
@@ -128,33 +138,106 @@ i.arrow-left {
   color: #fff;
   font-size: .8em;
 }
-
-#timeline:before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: -4px;
-  height: 100%;
-  border-left: 4px solid #bbb;
-}
-
-.fa {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
+#timeline li.item figure{
+  border: 1px solid #eee;
+  border-width: 1px 0;
+  padding: 30px 0;
   text-align: center;
 }
+#timeline li.item article{
+  padding: 15px;
+  font-size: 85%;
+}
+#timeline li.item article p{
+  text-indent: 2em;
+}
+@media screen and (min-width:1024px) {
+  .main{
+    min-height: 100%;
+    margin-left: 400px;
+    padding:50px;
+  }
+  aside{
+    position:fixed;
+    width: 400px;
+    left:0;
+    top:0;
+    height:100%;
+    overflow:hidden;
+    padding:30px 50px;
+    text-align: right;
+    box-shadow:-5px 0 5px rgba(0,0,0,.1) inset;
+  }
 
-.fa-code-fork {
-  content: "\f126";
+  aside .block{
+    float: right;
+    width: 100%;
+    max-width: 300px;
+  }
+  aside .block:after{
+    display: block;
+    content: "";
+    clear: both;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+  }
 }
 
-#timeline:before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: -4px;
-  height: 100%;
-  border-left: 4px solid #bbb;
+@media screen and (max-width: 1023px) {
+  .main{
+    padding: 1em;
+  }
+  aside{
+    position: relative;
+    padding: 1em;
+  }
+
+  #contact{
+    width: auto;
+  }
 }
+
+@media screen and (max-width: 640px) {
+  #timeline{
+    margin-left: 0;
+    padding-left: 0;
+  }
+  #timeline:before{
+    left: 50%;
+    margin-left: -2px;
+  }
+  #timeline p.line-end{
+    left: 50%;
+    margin-left: -40px;
+  }
+  #timeline li.item{
+    margin-top: 100px;
+  }
+  #timeline li.item .meta{
+    left: auto;
+    right: 50%;
+    top: -60px;
+    margin-right: -20px;
+  }
+  #timeline li.item .meta i.fa{
+    right: 0;
+  }
+  #timeline li.item p.date{
+    left: auto;
+    right: 50px;
+  }
+  #timeline li.item i.arrow-left{
+    display: none;
+    right: auto;
+    left: 12px;
+    top: 52px;
+
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
 
