--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -1,7 +1,86 @@
 @charset "utf-8";
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fa-addition";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-firefox:before { content: '\e802'; } /* '' */
+.icon-chrome:before { content: '\e803'; } /* '' */
+.icon-google:before { content: '\e800'; } /* '' */
+.icon-git:before { content: '\e801'; } /* '' */
+
+.progress{
+  height: 18px;
+  overflow: hidden;
+  /*padding: 1px;*/
+  border-radius: 4px;
+  background: #666;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,.3);
+}
+.progress .bar{
+  height: 100%;
+  padding: 0 10px;
+  border-radius: 3px;
+  background: #82C246;
+  box-shadow: inset 0 1px 1px rgba(255,255,255,.2);
+  font-size: 12px;
+  line-height: 18px;
+  text-align: left;
+}
+
+.fa:before{
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  text-align: center;
+}
+
+i.arrow-left{
+  display: inline-block;
+  position: absolute;
+  top: 12px;
+  left: -8px;
+  width: 15px;
+  height: 15px;
+  overflow: hidden;/*
+	border: 1px solid #e0e0e0;
+	border-width: 1px 0 0 1px;*/
+  background: #fff;
+
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
 .about-timeline-main{
   position:relative; zoom:1;
-  background:rgba(238,238,238,.4);
+ // background:rgba(238,238,238,.4);
 }
 
 #timeline{
