--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,7 +42,7 @@
 {% include header.html %}
 
 <div class="page-content">
-    <div class="wrapper">
+    <div class="wrapper" style="max-width: calc(1920px - (30px * 2))">
         {{ content }}
     </div>
 </div>
