--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
               | Powered by
               <a href="https://github.com/mojombo/jekyll">Jekyll</a>
               | Copyright 2014 by
-              <a href="http://tommyknight.cn/about">Tommy</a>
+              <a href="http://tommyknight.cn/about/index.html">Tommy</a>
           </small>
       </p>
 
