--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <a href="../blog/blog.html">Blog</a>
             <a href="../work/work.html">Works</a>
             <a href="../collections/collections.html">Collections</a>
-            <a href="../about/">About</a>
+            <a href="../about/index.html">About</a>
         </nav>
     </header>
 </section>
