--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,10 @@
 <div class="blog-cover" style="background-image: url('/images/shanghai-cover.jpg')">
     <section>
         <div class="container">
-            <h1>Code Life,<i class="love"></i>Shanghai,So Simple</h1>
-            <h3>tommyknight.cn</h3>
+            <p>
+                Code Life,<i class="love"></i>Shanghai,So Simple
+                <br/>tommyknight.cn
+            </p>
         </div>
     </section>
 </div>
