--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,10 +10,8 @@
 <div class="blog-cover" style="background-image: url('/images/shanghai-cover.jpg')">
     <section>
         <div class="container">
-            <p>
-                Code Life,<i class="love"></i>Shanghai,So Simple
-                <br/>tommyknight.cn
-            </p>
+           <h1>Code Life,<i class="love"></i>Shanghai,So Simple</h1>
+           <h3>tommyknight.cn</h3>
         </div>
     </section>
 </div>
