--- a/css/main.scss
+++ b/css/main.scss
@@ -133,6 +133,7 @@ address {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  dispaly: block;
 }
 
 .blog-cover h1, .blog-cover h3 {
