--- a/css/main.scss
+++ b/css/main.scss
@@ -133,7 +133,7 @@ address {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
-  dispaly: block;
+  word-break: break-all;
 }
 
 .blog-cover h1, .blog-cover h3 {
