--- a/css/main.scss
+++ b/css/main.scss
@@ -136,6 +136,10 @@ address {
   word-break: break-all;
 }
 
+.home-title{
+  display:inline;
+}
+
 .blog-cover h1, .blog-cover h3 {
   color: #fff;
   margin: 0;
