--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,8 @@
 <div class="blog-cover" style="background-image: url('/images/shanghai-cover.jpg')">
     <section>
         <div class="container">
-           <h1 class="home-title">Code Life,<i class="love"></i>Shanghai,So Simple</h1>
-           <h3 class="home-title">tommyknight.cn</h3>
+           <h1>Code Life,<i class="love"></i>Shanghai,So Simple</h1>
+           <h3>tommyknight.cn</h3>
         </div>
     </section>
 </div>
