--- a/css/main.scss
+++ b/css/main.scss
@@ -127,7 +127,7 @@ address {
 }
 
 .container {
-  width: 1170px;
+  position: relative;
   margin-top: 150px;
   margin-right: auto;
   margin-left: auto;
