--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="author" href="https://plus.google.com/106464408304855124012">
-    <style type="text/css">
+<!--    <style type="text/css">
         *{box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
         html,body,h1,h2,h3,h4,h5,h6,ul,ol,li,p,form,dl,dt,dd,figure{margin:0; padding:0; border:0;}
         html,body{height:100%;}
@@ -22,18 +22,7 @@
         h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{margin:0;}
         img{border:0; vertical-align: middle;}
         input,textarea{resize:none;}
-
-/*        @font-face {
-            font-family: 'fa-addition';
-            src: url('http://mbed.qiniudn.com/font/fa-addition.eot?81684682');
-            src: url('http://mbed.qiniudn.com/font/fa-addition.eot?81684682#iefix') format('embedded-opentype'),
-            url('http://mbed.qiniudn.com/font/fa-addition.woff?81684682') format('woff'),
-            url('http://mbed.qiniudn.com/font/fa-addition.ttf?81684682') format('truetype'),
-            url('http://mbed.qiniudn.com/font/fa-addition.svg?81684682#fa-addition') format('svg');
-            font-weight: normal;
-            font-style: normal;
-        }*/
-     </style>
+     </style>-->
 </head>
 
 <body>
