--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -268,6 +268,7 @@ i.arrow-left{
     right: 50%;
     top: -60px;
     margin-right: -20px;
+    box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;
   }
   #timeline li.item .meta i.fa{
     right: 0;
