--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
       <p>
           <small>
-               Contact me from&nbsp;&nbsp;&nbsp;&nbsp;
+              Contact me from&nbsp;&nbsp;
               <a href="https://twitter.com/tommywu23" title="@淘米侠 on Twitter" target="_blank">
                   <i class="icon icon-twitter black"></i>
               </a>
@@ -22,9 +22,9 @@
               <a href="/feed.xml" title="RSS Feed" target="_blank">
                   <i class="icon icon-rss black"></i>
               </a>
-              | Powered by
+              |&nbsp;Powered by
               <a href="https://github.com/mojombo/jekyll">Jekyll</a>
-              | Copyright 2014 by
+              |&nbsp;Copyright 2014 by
               <a href="http://tommyknight.cn/about/index.html">Tommy</a>
           </small>
       </p>
