--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
 
   <div class="wrapper">
       <p>
-          <small>
-              Contact me from&nbsp;&nbsp;
+          <small>&nbsp;Contact me from&nbsp;&nbsp;
               <a href="https://twitter.com/tommywu23" title="@淘米侠 on Twitter" target="_blank">
                   <i class="icon icon-twitter black"></i>
               </a>
@@ -21,10 +20,8 @@
               </a>
               <a href="/feed.xml" title="RSS Feed" target="_blank">
                   <i class="icon icon-rss black"></i>
-              </a>
-              |&nbsp;Powered by
-              <a href="https://github.com/mojombo/jekyll">Jekyll</a>
-              |&nbsp;Copyright 2014 by
+              </a>&nbsp;|&nbsp;Powered by
+              <a href="https://github.com/mojombo/jekyll">Jekyll</a>&nbsp;|&nbsp;Copyright 2014 by
               <a href="http://tommyknight.cn/about/index.html">Tommy</a>
           </small>
       </p>
