--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-      <p>
+      <p style="max-width: 740px">
           <small>&nbsp;Contact me from&nbsp;&nbsp;
               <a href="https://twitter.com/tommywu23" title="@淘米侠 on Twitter" target="_blank">
                   <i class="icon icon-twitter black"></i>
