--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-      <p style="min-width: 740px">
-          <small>&nbsp;Contact me from&nbsp;&nbsp;
+      <p>
+          <small>|&nbsp;Powered by
+              <a href="https://github.com/mojombo/jekyll">Jekyll</a>&nbsp;|&nbsp;Copyright 2014 by
+              <a href="http://tommyknight.cn/about/index.html">Tommy</a></small><br/>Contact me from&nbsp;&nbsp;
               <a href="https://twitter.com/tommywu23" title="@淘米侠 on Twitter" target="_blank">
                   <i class="icon icon-twitter black"></i>
               </a>
@@ -20,9 +22,7 @@
               </a>
               <a href="/feed.xml" title="RSS Feed" target="_blank">
                   <i class="icon icon-rss black"></i>
-              </a>&nbsp;|&nbsp;Powered by
-              <a href="https://github.com/mojombo/jekyll">Jekyll</a>&nbsp;|&nbsp;Copyright 2014 by
-              <a href="http://tommyknight.cn/about/index.html">Tommy</a>
+              </a>&nbsp;
           </small>
       </p>
 
@@ -36,6 +36,5 @@
 
         ga('create', '{{site.google_analytics}}', 'auto');
         ga('send', 'pageview');
-
     </script>
 </footer>
