--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="author" href="https://plus.google.com/106464408304855124012">
-
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="../main.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
         {{ content }}
     </div>
 </div>
-<script src="../main.js"></script>
+
 {% include footer.html %}
 
 </body>
