--- a/css/main.scss
+++ b/css/main.scss
@@ -225,5 +225,6 @@ body {
         "layout",
         "syntax-highlighting",
         "icons",
-        "timeline"
+        "timeline",
+        "nav"
 ;
