--- a/css/main.scss
+++ b/css/main.scss
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: 500;
   line-height: 1.1;
 }
-
+/*
 .site-nav #navigation>a {
   color: #444;
   border: 0;
@@ -179,7 +179,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .site-nav #navigation {
   padding-right: 0;
-}
+}*/
 
 .tag {
   color: #3e6d8e;
@@ -225,6 +225,7 @@ body {
         "layout",
         "syntax-highlighting",
         "icons",
-        "timeline",
-        "nav"
+        "nav",
+        "timeline"
+
 ;
