--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <p>
           <small>|&nbsp;Powered by
               <a href="https://github.com/mojombo/jekyll">Jekyll</a>&nbsp;|&nbsp;Copyright 2014 by
-              <a href="http://tommyknight.cn/about/index.html">Tommy</a><br/>Contact me from&nbsp;&nbsp;
+              <a href="http://tommyknight.cn/about/index.html">Tommy</a><br/><br/>|&nbsp;Contact me from&nbsp;&nbsp;
               <a href="https://twitter.com/tommywu23" title="@淘米侠 on Twitter" target="_blank">
                   <i class="icon icon-twitter black"></i>
               </a>
