--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
     <header>
         <nav id="navigation" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
             <a href="/">Home</a>
-            <a href="../blog/blog.html">Blog</a>
-            <a href="../work/work.html">Works</a>
-            <a href="../collections/collections.html">Collections</a>
+            <a href="../blog/index.html">Blog</a>
+            <a href="../work/index.html">Works</a>
+            <a href="../moments/index.html">Moments</a>
             <a href="../about/index.html">About</a>
         </nav>
     </header>
