--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
   {% include head.html %}
-
+  <link rel="stylesheet" href="../css/font-awesome.min.css">
   <body>
 
     {% include header.html %}
