--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  {% include head.html %}
 
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta name="description" content="{{ site.description }}">
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.min.css">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="author" href="https://plus.google.com/106464408304855124012">
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
-    <script src="../js/main.js"></script>
-</head>
-
-<body>
+  <body>
 
     {% include header.html %}
 
