--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <header>
         <nav id="navigation" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
             <a href="/">Home</a>
-            <a href="../blog.html">Blog</a>
+            <a href="../blog/index.html">Blog</a>
             <a href="../work/index.html">Works</a>
             <a href="../moments/index.html">Moments</a>
             <a href="../about/index.html">About</a>
