--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,11 @@
 <section class="site-nav">
     <header>
         <nav id="navigation" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
-            {% for link in site.navaigation %}
+            {% for link in site.navigation %}
+            {% assign current = nil %}
+            {% if page.url == link.url or page.layout == link.layout %}
+            {% assign current = 'current' %}
+            {% endif %}
                 <a href="{{ link.url }}">{{ link.text }}</a>
             {% endfor %}
         </nav>
