--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "../css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{  site.url }}/css/main.css">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="author" href="https://plus.google.com/106464408304855124012">
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script type="text/javascript" src="{{ site.url }}/js/jquery.min.js"></script>
+    <script src="{{ site.url }}/js/main.js"></script>
 </head>
