--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@
 
 {% include header.html %}
 
-<div class="blog-cover" style="background-image: url('/images/shanghai-cover.jpg')">
+<div class="blog-cover" style="background-image: url('{{ site.cdn_url }}/shanghai-cover.jpg')">
     <section>
         <div class="container">
            <h1>Code Life,<i class="love"></i>Shanghai,So Simple</h1>
