--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,6 +2,20 @@
 layout: default
 title: Blog
 ---
-<div class="container">
-    {{ paginator.total_posts }}
+<div class="home">
+    <h1 class="page-heading">Latest News</h1>
+    <ul class="post-list">
+        {% for post in paginator.posts %}
+        {% if post.category != 'works' && paginator.page == 1 %}
+        <li>
+            <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+
+            <h2>
+                <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+            </h2>
+        </li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 </div>
