--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Blog
 ---
-<div class="home">
+<div class="home" style="margin-top: 80px">
     <h1 class="page-heading">Latest News</h1>
     <ul class="post-list">
         {% for post in paginator.posts %}
