--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,7 +4,7 @@ layout: default
 <div class="home" style="margin-top: 80px">
     <h1 class="page-heading">Latest News</h1>
     <ul class="post-list">
-        {% for post in site.posts %}
+        {% for post in paginator.posts %}
         {% if post.category != 'works' %}
         <li>
             <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
