--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="home" style="margin-top: 80px">
-    <h1 class="page-heading">Latest News</h1>
+    <h1 class="page-heading">Latest News {{ paginator.total_posts }}</h1>
     <ul class="post-list">
         {% for post in paginator.posts %}
         {% if post.category != 'works' %}
