--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<div class="home" style="margin-top: 80px">
+
+{% include panel.html %}
+<!--<div class="home" style="margin-top: 80px">
     <h1 class="page-heading">Latest News {{ paginator.total_posts }}</h1>
     <ul class="post-list">
         {% for post in paginator.posts %}
@@ -16,4 +18,4 @@ layout: default
         {% endif %}
         {% endfor %}
     </ul>
-</div>
+</div>-->
