--- a/css/main.scss
+++ b/css/main.scss
@@ -309,6 +309,6 @@ body.nav-hidden {
         "layout",
         "syntax-highlighting",
         "icons",
-        "timeline"
-
+        "timeline",
+        "panel"
 ;
