--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -1,5 +1,5 @@
 .panel-body {
-  width: 271px;
+  width: 300px;
   height: auto;
   padding: 20px 0;
   float: right;
@@ -7,4 +7,15 @@
   margin-top: 80px;
   // Positioning context for the mobile navigation icon
   position: relative;
+}
+
+.panel-main{
+  width:100%;
+  float:left;
+  margin:20px 0;
+  overflow:hidden;
+  -webkit-box-shadow:2px 2px 12px #787878;
+  box-shadow:2px 2px 12px #787878;
+  border-radius:3px;
+  background:#e6e6e6 url(../images/bg_main.png);
 }
