--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -2,7 +2,7 @@
    <section class="panel-main">
        <section class="panel-active">
            <a href="/" title="查看所有文章">
-               <i class="fa .fa-file-archive-o"></i>
+               <i class="fa fa-file-archive-o"></i>
                " 最近发表"
            </a>
            <span title="文章总数">{{ site.posts.size }}</span>
