--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -17,5 +17,5 @@
   -webkit-box-shadow:2px 2px 12px #787878;
   box-shadow:2px 2px 12px #787878;
   border-radius:3px;
-  background:#e6e6e6 url(../images/bg_main.png);
+  background:#e6e6e6;
 }
