--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -6,6 +6,13 @@
                " 最近发表"
            </a>
            <span title="文章总数">{{ site.posts.size }}</span>
+           <ul>
+               {% for post in paginator.posts limit:5 %}
+                {% unless post.category != "work" %}
+                    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+                {% endunless %}
+               {% endfor %}
+           </ul>
        </section>
    </section>
 </div>
