--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -7,9 +7,10 @@
            </a>
            <span title="文章总数">{{ site.posts.size }}</span>
            <ul>
-               {% for post in paginator.posts limit:3 %}
-
+               {% for post in paginator.posts limit:13 %}
+                {% unless post.categories contains 'works' %}
                     <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+                {% endunless %}
                {% endfor %}
            </ul>
        </section>
