--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -8,9 +8,9 @@
            <span title="文章总数">{{ site.posts.size }}</span>
            <ul>
                {% for post in paginator.posts limit:13 %}
-                {% unless post.categories contains 'works' %}
+                {% if post.category != 'works' %}
                     <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-                {% endunless %}
+                {% endif %}
                {% endfor %}
            </ul>
        </section>
