--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -1,18 +1,21 @@
-<div class="panel-body">
-   <section class="panel-main">
-       <section class="panel-active">
-           <a href="/" title="查看所有文章">
-               <i class="fa fa-file-archive-o"></i>
-               " 最近发表"
-           </a>
-           <span title="文章总数">{{ site.posts.size }}</span>
-           <ul>
-               {% for post in paginator.posts limit:13 %}
-                {% unless post.categories == 'works' %}
+<div id="panel">
+    <aside id="sidebar">
+        <section class="panel-main">
+            <section class="panel-active">
+                <a href="/" title="查看所有文章">
+                    <i class="fa fa-file-archive-o"></i>
+                    " 最近发表"
+                </a>
+                <span title="文章总数">{{ site.posts.size }}</span>
+                <ul>
+                    {% for post in paginator.posts limit:5 %}
+                    {% if post.category != 'works' %}
                     <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-                {% endunless %}
-               {% endfor %}
-           </ul>
-       </section>
-   </section>
+                    {% endif %}
+                    {% endfor %}
+                </ul>
+            </section>
+
+        </section>
+    </aside>
 </div>
