--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -1,4 +1,4 @@
-.panel-body {
+#panel {
   width: 300px;
   height: auto;
   padding: 20px 0;
@@ -9,6 +9,51 @@
   position: relative;
 }
 
+#sidebar section {
+  background: url('../images/bg_sidebar.png') no-repeat: 0 0;
+}
+
+#sidebar section.active >a {
+  color: #ae432e;
+}
+
+#sidebar section span {
+  float: right;
+  display: block;
+  position: relative;
+  top: -27px;
+  padding: 3px 5px 1px;
+  background-color: #d1d1d1;
+  border: 1px solid #bfbfbf;
+  margin-right: 20px;
+  font-size: 77%;
+  color: #444;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+#sidebar section ul {
+  margin-left: 40px;
+  margin-right: 30px;
+}
+
+#sidebar section ul li {
+  list-style: none;
+  padding-left: 10px;
+  background: url('../images/bg_list_style.png') no-repeat 0 10px;
+}
+
+#sidebar section a {
+  color: #444;
+  text-decoration: none;
+}
+
+#sidebar section ul li a {
+  padding: 3px 0 1px;
+  font-size: 85%;
+  text-shadow: none;
+}
+
 .panel-main{
   width:100%;
   float:left;
@@ -17,5 +62,5 @@
   -webkit-box-shadow:2px 2px 12px #787878;
   box-shadow:2px 2px 12px #787878;
   border-radius:3px;
-  background:#e6e6e6;
+  background: #e6e6e6 url('../images/bg_main.png') repeat-y 263px 0;
 }
