--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -9,9 +9,9 @@
                 <span title="文章总数">{{ site.posts.size }}</span>
                 <ul>
                     {% for post in paginator.posts limit:5 %}
-                    {% if post.category != 'works' %}
-                    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-                    {% endif %}
+                        {% if post.category == 'works' %}
+                            <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+                        {% endif %}
                     {% endfor %}
                 </ul>
             </section>
