--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -11,7 +11,7 @@
 
 /*#sidebar section {
   background: url('../images/bg_sidebar.png') no-repeat: 0 0;
-}
+}*/
 
 #sidebar section.active >a {
   color: #ae432e;
@@ -37,11 +37,11 @@
   margin-right: 30px;
 }
 
-#sidebar section ul li {
+/*#sidebar section ul li {
   list-style: none;
   padding-left: 10px;
   background: url(../images/bg_list_style.png) no-repeat 0 10px;
-}
+}*/
 
 #sidebar section a {
   color: #444;
@@ -52,7 +52,7 @@
   padding: 3px 0 1px;
   font-size: 85%;
   text-shadow: none;
-}*/
+}
 
 .panel-main{
   width:100%;
