--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -37,11 +37,11 @@
   margin-right: 30px;
 }
 
-/*#sidebar section ul li {
+#sidebar section ul li {
   list-style: none;
   padding-left: 10px;
   background: url(../images/bg_list_style.png) no-repeat 0 10px;
-}*/
+}
 
 #sidebar section a {
   color: #444;
