--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -1,6 +1,35 @@
 <div id="panel">
     <section class="panel-main">
         <aside id="sidebar">
+            <section>
+                <div id="clustrmaps-widget">
+
+                </div>
+                <script type="text/javascript">
+                        var _clustrmaps = {
+                           'url' : 'http://tommyknight.cn',
+                           'user' : 1090062,
+                           'server' : '2',
+                           'id' : 'clustrmaps-widget',
+                           'version' : 1,
+                           'date' : '2013-04-17',
+                           'lang' : 'zh', 'corners' : 'square'
+                        };
+
+                        (function (){
+                            var s = document.createElement('script');
+                            s.type = 'text/javascript';
+                            s.async = true;
+                            s.src = 'http://www2.clustrmaps.com/counter/map.js';
+                            var x = document.getElementsByTagName('script')[0];
+                            x.parentNode.insertBefore(s, x);})();
+                </script>
+                <noscript>
+                    <a href="http://www2.clustrmaps.com/user/3d810a20e">
+                        <img src="http://www2.clustrmaps.com/stats/maps-no_clusters/www.cnblogs.com-tmywu--thumb.jpg" alt="Locations of visitors to this page" />
+                    </a>
+                </noscript>
+            </section>
             <section class="panel-active">
                 <a href="/" title="查看所有文章">
                     <i class="fa fa-file-archive-o"></i>
