--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -51,7 +51,8 @@
 }
 
 #sidebar section {
-  background: url(../images/bg_sidebar.png) no-repeat: 0 0px;
+  background: url(../images/bg_sidebar.png);
+  no-repeat: 0 0px;
 }
 
 .panel-main{
