--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -1,35 +1,6 @@
 <div id="panel">
     <section class="panel-main">
         <aside id="sidebar">
-            <section>
-                <div id="clustrmaps-widget">
-
-                </div>
-                <script type="text/javascript">
-                        var _clustrmaps = {
-                           'url' : 'http://tommyknight.cn',
-                           'user' : 1090062,
-                           'server' : '2',
-                           'id' : 'clustrmaps-widget',
-                           'version' : 1,
-                           'date' : '2013-04-17',
-                           'lang' : 'zh', 'corners' : 'square'
-                        };
-
-                        (function (){
-                            var s = document.createElement('script');
-                            s.type = 'text/javascript';
-                            s.async = true;
-                            s.src = 'http://www2.clustrmaps.com/counter/map.js';
-                            var x = document.getElementsByTagName('script')[0];
-                            x.parentNode.insertBefore(s, x);})();
-                </script>
-                <noscript>
-                    <a href="http://www2.clustrmaps.com/user/3d810a20e">
-                        <img src="http://www2.clustrmaps.com/stats/maps-no_clusters/www.cnblogs.com-tmywu--thumb.jpg" alt="Locations of visitors to this page" />
-                    </a>
-                </noscript>
-            </section>
             <section class="panel-active">
                 <a href="/" title="查看所有文章">
                     <i class="fa fa-file-archive-o"></i>
@@ -62,6 +33,24 @@
                     " 标签分类"
                 </a>
                 <span title="标签总数">{{ site.tags.size }}</span>
+                {% for tag in site.tags %}
+                {% assign temp = tag[1].size | minus: min | times: 36 | divided_by: diff %}
+                {% assign base = temp | divided_by: 4 %}
+                {% assign remain = temp | modulo: 4 %}
+                {% if remain == 0 %}
+                {% assign size = base | plus: 9 %}
+                {% elsif remain == 1 or remain == 2 %}
+                {% assign size = base | plus: 9 | append: '.5' %}
+                {% else %}
+                {% assign size = base | plus: 10 %}
+                {% endif %}
+                {% if remain == 0 or remain == 1 %}
+                {% assign color = 9 | minus: base %}
+                {% else %}
+                {% assign color = 8 | minus: base %}
+                {% endif %}
+                <a href="/" style="font-size: {{ size }}pt; color: #{{ color }}{{ color }}{{ color }};">{{ tag[0] }}</a>
+                {% endfor %}
             </section>
         </aside>
     </section>
