--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -46,6 +46,7 @@
   float: right;
   display: block;
   position: relative;
+  top: -27px;
   padding: 3px 5px 1px;
   background-color: #d1d1d1;
   border: 1px solid #bfbfbf;
