--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -81,3 +81,9 @@
   font-size: 85%;
   text-shadow: none;
 }
+
+#tag-cloud {
+  margin-left: 40px;
+  margin-right: 30px;
+  margin-bottom: 15px;
+}
