--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -35,5 +35,10 @@
                     {% endfor %}
                 </div>
             </section>
+            <section>
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.5/cn/">
+                    <img alt="知识共享许可协议" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/2.5/cn/88x31.png" />
+                </a>
+            </section>
         </aside>
 </div>
