--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<div id="post_main">
+  {% include content.html %}
+  {% include panel.html %}
+</div>
 
-{% include panel.html %}
 
