--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,8 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-          {{ content }}
-      </div>
+    <div class="page-content" style="width: 1000px">
+       {{ content }}
     </div>
 
     {% include footer.html %}
