--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,10 @@
 
     {% include header.html %}
 
-    <div class="page-content" style="width: 1000px">
-       {{ content }}
+    <div class="page-content">
+      <div class="wrapper" style="width: 1024px">
+          {{ content }}
+      </div>
     </div>
 
     {% include footer.html %}
