--- a/css/main.scss
+++ b/css/main.scss
@@ -291,8 +291,7 @@ body.nav-hidden {
 }
 
 #post_main{
-  width: 50%;
-  float: left;
+  width: 1024px;
   margin: 20px 0;
   overflow: hidden;
   -webkit-box-shadow: 2px 2px 12px #787878;
