--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -2,7 +2,7 @@
   width: 300px;
   height: auto;
   padding: 20px 0;
-  float: right;
+  float: left;
   font-size: 116%;
   margin-top: 80px;
   // Positioning context for the mobile navigation icon
